--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
-RewriteEngine On
-RewriteCond [REQUEST_URI] !-f
-RewriteCond [REQUEST_URI] !-d
-RewriteRule ^(.*)$ index.php?_route_=$1 [QSA,L]
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{REQUEST_URI} !^/public/
+    RewriteRule ^(.*)$ /public/$1 [L,QSA]
+</IfModule>
